--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,41 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  @layer base {
-    .main-menu {
-      @apply md:cursor-pointer relative text-2xl md:text-sm;
-    }
-
-    .main-menu > span {
-      @apply text-gray-300 hover:text-green-500;
-    }
-
-    .sub-menu {
-      @apply pl-12 md:pl-0 top-16 md:top-12 absolute md:bg-white rounded-lg py-2 w-full md:w-40 -left-10 border-t-4 md:border-green-400 space-y-1 z-30;
-    }
-
-    .sub-menu > li {
-      @apply text-gray-600 hover:text-green-500 py-2 space-x-4 hover:bg-gray-500;
-    }
-    .sub-menu > li > a {
-      @apply ml-4;
-    }
-  }
-}
-
 body {
   background-color: #2b2b37;
+}
+
+@layer base {
+  .main-menu {
+    @apply md:cursor-pointer relative text-2xl md:text-sm;
+  }
+
+  .main-menu > span {
+    @apply text-gray-300 hover:text-green-500;
+  }
+
+  .sub-menu {
+    @apply pl-12 md:pl-0 top-16 md:top-12 absolute md:bg-white rounded-lg py-2 w-full md:w-40 -left-10 border-t-4 md:border-green-400 space-y-1 z-30;
+  }
+
+  .sub-menu > li {
+    @apply text-gray-600 hover:text-green-500 py-2 space-x-4 hover:bg-gray-500;
+  }
+  .sub-menu > li > a {
+    @apply ml-4;
+  }
 }
 
 @layer utilities {
   .mobile-menu {
     background-color: #2b2b37;
   }
-}
-
-@layer utilities {
   .sing-in-btn {
     background-color: rgb(54, 55, 70);
+  }
+  .hero-bg {
+    background-image: url('/svg/coins-bg.svg');
   }
 }
