feat: Tabs complete ✅

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,12 @@
 body {
   background-color: #2b2b37;
 }
+input {
+  outline: transparent;
+}
+select {
+  background-color: #36324a;
+}
 
 @layer base {
   .main-menu {
@@ -36,5 +42,87 @@ body {
   }
   .hero-bg {
     background-image: url('/svg/coins-bg.svg');
+  }
+  .tab-bg {
+    background-color: #343443;
+  }
+  .tab-w-lg {
+    width: 36rem;
+  }
+  .tab-content-border {
+    border: 1px solid #46475e;
+    border-top: none;
+  }
+
+  /* Left Tab */
+  .active-tab__left {
+    border: 1px solid #46475e;
+    border-bottom: transparent;
+    color: #fff;
+    background: #343443;
+    position: relative;
+  }
+  .active-tab__left::before {
+    content: '';
+    position: absolute;
+    top: -1px;
+    right: -14px;
+    bottom: 0;
+    width: 25px;
+    height: calc(100% + 2px);
+    -webkit-transform: skewX(20deg);
+    transform: skewX(20deg);
+    z-index: 1;
+    background: #343443;
+    border-radius: 0 5px 0 0;
+    border: 1px solid #46475e;
+    border-bottom-color: transparent;
+    border-left: none;
+  }
+  .tab-style {
+    font-size: 13px;
+    line-height: 15px;
+    height: 50px;
+    background: #30303e;
+    border: 1px solid #46475e;
+    color: #808086;
+  }
+  /* Right Tab */
+  .active-tab__right {
+    border: 1px solid #46475e;
+    border-bottom: transparent;
+    color: #fff;
+    background: #343443;
+    position: relative;
+  }
+  .active-tab__right::before {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: -14px;
+    bottom: 0;
+    width: 25px;
+    height: calc(100% + 2px);
+    -webkit-transform: skewX(20deg);
+    transform: skewX(-20deg);
+    z-index: 1;
+    background: #343443;
+    border-radius: 5px 0 0 0;
+    border: 1px solid #46475e;
+    border-bottom-color: transparent;
+    border-right: none;
+  }
+  .input-field {
+    background: #3e3e59;
+  }
+  .exchange-btn {
+    background-color: #30303e;
+  }
+  .exchange-btn__active {
+    background-color: #3e3e59;
+    color: #00c26f;
+  }
+  .stroke-color__active {
+    color: #00c26f;
   }
 }
