fix:Fixed exchange-tabs width 🔨

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,9 @@ select {
   .tab-bg {
     background-color: #343443;
   }
+  .tab-w-min {
+    width: 32rem;
+  }
   .tab-w-lg {
     width: 36rem;
   }
